# GT-HMI-Builder

./: LICENSE  README.md
GT-MindCraft Embedded/chatbot/ESP32 IDF Project/components/GT/: CMakeLists.txt
GT-MindCraft Embedded/chatbot/ESP32 IDF Project/components/GT/ESPTIM/: esptim.c  esptim.h
GT-MindCraft Embedded/chatbot/ESP32 IDF Project/components/GT/FLASH_SPI/: gtspi.c  gtspi.h
GT-MindCraft Embedded/chatbot/ESP32 IDF Project/components/GT/GT_DRV/: gt_audio_play.c  gt_audio_play.h  gt_audio_storage.c  gt_audio_storage.h  gt_nvs_store.c  gt_nvs_store.h  gt_pipe_send.c  gt_pipe_send.h  gt_pipeline_play.c  gt_pipeline_play.h  gt_protocol_config.h  gt_record_http.c  gt_record_http.h  gt_recording.c  gt_recording.h  gt_role_emote.c  gt_role_emote.h  gt_websocket.c  gt_websocket.h  http_send.c  http_send.h  wifi.c  wifi.h  wifi_config.c  wifi_config.h
GT-MindCraft Embedded/chatbot/ESP32 IDF Project/components/GT/GT_TOUCH/: gt_touch.c  gt_touch.h  touch_cst836u.c  touch_cst836u.h
GT-MindCraft Embedded/chatbot/ESP32 IDF Project/components/GT/GUI/: gt.h
GT-MindCraft Embedded/chatbot/ESP32 IDF Project/components/GT/GUI/driver/: gt_font_config.c  gt_port_disp.c  gt_port_src.c  gt_port_vf.c
GT-MindCraft Embedded/chatbot/ESP32 IDF Project/components/GT/GUI/src/: gt_conf.h
GT-MindCraft Embedded/chatbot/ESP32 IDF Project/components/GT/LCD/: lcd.c  lcd.h  lcdfont.h
GT-MindCraft Embedded/chatbot/ESP32 IDF Project/components/GT/SPI/: spi.c  spi.h
GT-MindCraft Embedded/chatbot/ESP32 IDF Project/components/GT/app/: locate_data_ctrl.c  locate_data_ctrl.h
GT-MindCraft Embedded/chatbot/ESP32 IDF Project/components/GT/inc/: zk_app.h  zk_config.h  zk_hw_conf.h
GT-MindCraft Embedded/chatbot/ESP32 IDF Project/components/GT/screen/: gt_init_Function_settings.c  gt_init_History_page.c  gt_init_connection_failed.c  gt_init_forget_password.c  gt_init_keyboard.c  gt_init_main_interface.c  gt_init_screen_home.c  gt_init_screen_setup.c  gt_init_screen_subtitle.c  gt_init_setting_list.c  gt_init_volume_and_brightness.c  gt_init_wifi_list.c  gt_ui.c  gt_ui.h
(+588 files in other folders)
